--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,9 +3,11 @@ repos:
     rev: v2.3.0
     hooks:
       - id: check-yaml
+      - id: check-ast
       - id: end-of-file-fixer
       - id: check-added-large-files
       - id: detect-private-key
+      - id: trailing-whitespace
   - repo: https://github.com/Lucas-C/pre-commit-hooks-safety
     rev: v1.3.3
     hooks:
